<resources>
    <string name="app_name">Mileage Tracker</string>
    <string name="blank"></string>
    <string name="get_text">Get Text</string>
    <string name="main_title">Mileage Tracker</string>
    <string name="add_stop">Add Stop</string>
    <string name="hint_street">Street</string>
    <string name="hint_city">City</string>
    <string name="hint_date">Date</string>
    <string name="hint_start_km">Starting KM</string>
    <string name="hint_end_km">Ending KM</string>
    <string name="hint_start_date">Start Date</string>
    <string name="hint_end_date">End Date</string>
    <string name="save_stop">Save</string>
    <string name="back">Back</string>
    <string name="enter_dates">Enter Custom Dates To Send</string>
    <string name="saturday_thru_friday">Send Saturday - Friday stops</string>
    <string name="use_favourite">Use Favourite</string>
    <string name="add_favourite">Add as Favourite</string>
    <string name="open_camera">Open Camera</string>
    <string name="edit_stop_title">Edit Stop</string>
    <string name="click_stop">Touch to Edit / Swipe to Delete</string>
    <string name="confirm_delete_title">Delete Stop</string>
    <string name="confirm_delete_message">Confirm you want to delete stop?</string>
    <string name="confirm_delete_favourite_title">Delete Favourite</string>
    <string name="confirm_delete_favourite_message">Confirm delete favourite?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="about">About</string>
    <string name="send_this_week">Send This Week</string>
    <string name="send_custom_dates">Send Custom Dates</string>
    <string name="email_stops_title">E-mail Stops</string>
    <string name="settings">Settings</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="email_address">tylerbfink@gmail.com</string>

    <string-array name="main_options_array">
        <item>Add Stop</item>
        <item>Edit Stop</item>
        <item>Summary - Today</item>
        <item>Summary - Week</item>
        <item>Email Stops</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>
</resources>